[project]
name = "hunt_crew"
version = "0.1.0"
description = "hunt_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.9.3",
    "plotly>=6.5.2",
    "pytest>=9.0.2",
    "ratelimit>=2.2.1",
]

[project.scripts]
hunt_crew = "hunt_crew.main:run"
run_crew = "hunt_crew.main:run"
train = "hunt_crew.main:train"
replay = "hunt_crew.main:replay"
test = "hunt_crew.main:test"
run_with_trigger = "hunt_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
