[project]
name = "your_crew"
version = "0.1.0"
description = "your_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,google-genai,tools]==1.9.3",
]

[project.scripts]
your_crew = "your_crew.main:run"
run_crew = "your_crew.main:run"
train = "your_crew.main:train"
replay = "your_crew.main:replay"
test = "your_crew.main:test"
run_with_trigger = "your_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
